Spacing fix

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -142,7 +142,7 @@ $left-nav-width: 17%
   position: absolute
   left: 0
   right: 0
-  top: 8em
+  top: 7.8em
 .main-results 
   overflow: scroll
 .draft-wrapper
