--- a/app/assets/stylesheets/module.css.sass
+++ b/app/assets/stylesheets/module.css.sass
@@ -286,7 +286,7 @@
 
 .main-results-wrapper
   position: absolute
-  top: 10.7em
+  top: 10.5em
   bottom: 0
   right: 0
   left: 0
